--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 		-->
 		<div class="onepage">
-				<h2 style="font-family:courier;color:rgb(160,40,090);text-align:left">Photography Design Project</h2>	
+				<h2 style="font-family:courier;color:rgb(160,40,090);text-align:left">Shoe Photography Project</h2>	
 				<table border='1' align="center" style="text-align:left">
 				<tr>
 					<td style="padding:20px;padding-bottom:00px;">					
